<resources>
    <string name="app_name">EasyPoem</string>
    <string name="title_my_poems">Библиотека</string>
    <string name="title_compass">Интересное</string>
    <string name="title_profile">Профиль</string>
    <string name="fab_add">Добавить</string>
    <string name="fab_search">Найти</string>
    <string name="fab_create">Создать</string>
    <string name="imagebutton_back">imageButton_back</string>
    <string name="folders">Папки</string>
    <string name="show_all">Смотреть все</string>
    <string name="poems">Стихотворения</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>