<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".my_poems">






    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/orange"
        app:tint = "@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/fab_add"
        android:src="@drawable/ic_button_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_poem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/orange"
        app:tint = "@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab_add"
        android:contentDescription="@string/fab_create"
        android:src="@drawable/ic_button_new_poem_24"
         />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/orange"
        app:tint = "@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab_new_poem"
        android:contentDescription="@string/fab_search"
        android:src="@drawable/ic_button_new_folder_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/folder"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/folders"
                android:textColor="@color/orange"
                android:textSize="25sp" />

            <Button
                android:id="@+id/see_all_folder"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_button_forward_24"
                android:text="@string/show_all"
                android:textAllCaps="false"
                android:textColor="@color/gray_hint"
                android:textSize="12sp" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:id="@+id/folders_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_card"
                android:visibility="invisible"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint = "@color/orange"
                    android:src="@drawable/ic_button_new_folder_24" />


                <TextView
                    android:id="@+id/first_folder"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="Последняя папка"
                    android:textColor="@color/gray_hint"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_folder_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_card"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/add_folder_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:src="@drawable/ic_button_add_24" />

            </LinearLayout>

        </FrameLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/poem"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/poems"
                android:textColor="@color/orange"
                android:textSize="25sp" />

            <Button
                android:id="@+id/see_all_poems"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_button_forward_24"
                android:text="@string/show_all"
                android:textAllCaps="false"
                android:textColor="@color/gray_hint"
                android:textSize="12sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:id="@+id/poems_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:background="@drawable/border_card"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint = "@color/orange"
                    android:src="@drawable/ic_button_new_poem_24" />

                <TextView
                    android:id="@+id/first_poem"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="Я вас любил..."
                    android:textColor="@color/gray_hint"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/first_author"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_weight="1.0"
                    android:gravity="start"
                    android:text="A.C.Пушкин"
                    android:textColor="@color/gray_hint_light"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_poem_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_card"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/add_poem_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:src="@drawable/ic_button_add_24" />

            </LinearLayout>

        </FrameLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>